--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ src="https://www.facebook.com/tr?id=4394073100872822&ev=PageView&noscript=1"
 
                 </div>
                 <div class="my-10 w-full grid place-items-center">
-                    <a href="https://t.me/+HmtkdJQovXpmOWU1">
+                    <a href="https://t.me/+LOMalx_rPh5hOTFl">
           <button
             class="tetegrambtn px-2 py-4 rounded-lg text-sm flex gap-2 place-items-center  font-bold text-white  shadow-md hover:scale-105 border-b-4 border-red-500 " style=" background-color: rgb(4, 251, 255);">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="blue" class="bi bi-telegram" viewBox="0 0 16 16">
